RESOLVED FIXED208859
Accurate style invalidation for user action pseudo classes
https://bugs.webkit.org/show_bug.cgi?id=208859
Summary Accurate style invalidation for user action pseudo classes
Antti Koivisto
Reported 2020-03-10 06:02:16 PDT
We invalidate too much for :hover, :focus and :active.
Attachments
wip (19.62 KB, patch)
2020-03-10 06:04 PDT, Antti Koivisto
no flags
wip (21.45 KB, patch)
2020-03-10 07:42 PDT, Antti Koivisto
no flags
wip (21.45 KB, patch)
2020-03-10 07:49 PDT, Antti Koivisto
no flags
patch (31.42 KB, patch)
2020-03-11 05:54 PDT, Antti Koivisto
no flags
patch (31.58 KB, patch)
2020-03-11 11:34 PDT, Antti Koivisto
no flags
patch (30.89 KB, patch)
2020-03-11 12:08 PDT, Antti Koivisto
zalan: review+
patch (43.81 KB, patch)
2020-03-12 03:41 PDT, Antti Koivisto
no flags
patch (44.25 KB, patch)
2020-03-12 05:44 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-03-10 06:04:36 PDT
Antti Koivisto
Comment 2 2020-03-10 07:42:36 PDT
Antti Koivisto
Comment 3 2020-03-10 07:43:01 PDT
Antti Koivisto
Comment 4 2020-03-10 07:49:11 PDT
Antti Koivisto
Comment 5 2020-03-11 05:54:19 PDT
Antti Koivisto
Comment 6 2020-03-11 11:34:10 PDT
Antti Koivisto
Comment 7 2020-03-11 12:08:52 PDT
Antti Koivisto
Comment 8 2020-03-12 03:41:41 PDT
Antti Koivisto
Comment 9 2020-03-12 05:44:03 PDT
WebKit Commit Bot
Comment 10 2020-03-12 06:30:15 PDT
Comment on attachment 393361 [details] patch Clearing flags on attachment: 393361 Committed r258321: <https://trac.webkit.org/changeset/258321>
WebKit Commit Bot
Comment 11 2020-03-12 06:30:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.