Source/WebCore/style/RuleFeature.cpp
@@ -153,7 +153,8 @@ void RuleFeatureSet::recursivelyCollectFeaturesFromSelector(SelectorFeatures& se
             default:
                 break;
             }
-        }
+        } else if (selector->match() == CSSSelector::PseudoClass)
+            selectorFeatures.pseudoClasses.append(std::make_pair(selector->pseudoClassType(), matchElement));
 
         if (!selectorFeatures.hasSiblingSelector && selector->isSiblingSelector())
             selectorFeatures.hasSiblingSelector = true;
@@ -199,6 +200,13 @@ void RuleFeatureSet::collectFeatures(const RuleData& ruleData)
         if (matchElement == MatchElement::Host)
             attributesAffectingHost.add(selector->attribute().localName().convertToASCIILowercase());
     }
+    for (auto& keyAndMatch : selectorFeatures.pseudoClasses) {
+        pseudoClassRules.ensure(keyAndMatch.first, [] {
+            return makeUnique<Vector<RuleFeature>>();
+        }).iterator->value->append({ ruleData, keyAndMatch.second });
+        if (keyAndMatch.second == MatchElement::Host)
+            pseudoClassesAffectingHost.add(keyAndMatch.first);
+    }
 }
 
 void RuleFeatureSet::add(const RuleFeatureSet& other)
@@ -224,6 +232,13 @@ void RuleFeatureSet::add(const RuleFeatureSet& other)
     }
     attributesAffectingHost.add(other.attributesAffectingHost.begin(), other.attributesAffectingHost.end());
 
+    for (auto& keyValuePair : other.pseudoClassRules) {
+        pseudoClassRules.ensure(keyValuePair.key, [] {
+            return makeUnique<Vector<RuleFeature>>();
+        }).iterator->value->appendVector(*keyValuePair.value);
+    }
+    pseudoClassesAffectingHost.add(other.pseudoClassesAffectingHost.begin(), other.pseudoClassesAffectingHost.end());
+
     usesFirstLineRules = usesFirstLineRules || other.usesFirstLineRules;
     usesFirstLetterRules = usesFirstLetterRules || other.usesFirstLetterRules;
 }
@@ -248,6 +263,8 @@ void RuleFeatureSet::clear()
     classesAffectingHost.clear();
     attributeRules.clear();
     attributesAffectingHost.clear();
+    pseudoClassRules.clear();
+    pseudoClassesAffectingHost.clear();
     usesFirstLineRules = false;
     usesFirstLetterRules = false;
 }
@@ -259,6 +276,8 @@ void RuleFeatureSet::shrinkToFit()
     for (auto& rules : classRules.values())
         rules->shrinkToFit();
     for (auto& rules : attributeRules.values())
+        rules->shrinkToFit();
+    for (auto& rules : pseudoClassRules.values())
         rules->shrinkToFit();
 }
 
